--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-
+GameDefaultMap=/Game/Maps/TestMap.TestMap
+EditorStartupMap=/Game/Maps/TestMap.TestMap
+GlobalDefaultGameMode=/Game/BP_BaseShootGameModeBase.BP_BaseShootGameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
